resources/k8s-manifest-staging/network/stg-challanpay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stg-challanpay-ingress
  namespace: stg
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:344367180480:certificate/73bd7ab6-0c4b-418f-8878-71e875ba597a
    alb.ingress.kubernetes.io/group.name: laweryerd-np-group
    alb.ingress.kubernetes.io/group.order: "30"
    alb.ingress.kubernetes.io/success-codes: "200,301,302,404"
    alb.ingress.kubernetes.io/load-balancer-name: lawyered-ingress-alb
spec:
  rules:


  # ── staging-qr.challanpay.in ───────────────────────────────────────────────
  - host: staging-qr.challanpay.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-qr-api
              port:
                number: 80

  # ── staging-react.challanpay.in ───────────────────────────────────────────
  - host: staging-react.challanpay.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-challanpay-react
              port:
                number: 80
