resources/k8s-manifest-staging/network/stg-indiaaccelerator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stg-indiaaccelerator-ingress
  namespace: stg
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:344367180480:certificate/8f402c5c-40b2-4c94-8103-8d00b5b5b37a
    alb.ingress.kubernetes.io/group.name: laweryerd-np-group
    alb.ingress.kubernetes.io/group.order: "40"
    alb.ingress.kubernetes.io/success-codes: "200,301,302,404"
    alb.ingress.kubernetes.io/load-balancer-name: lawyered-ingress-alb
spec:
  rules:
  # ── core-platform-dev.indiaaccelerator.co → core-platform frontend ─────────
  - host: core-platform-dev.indiaaccelerator.co
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-core-platform-fe
              port:
                number: 80

  # ── core-platform-be-dev.indiaaccelerator.co → core-platform backend ───────
  - host: core-platform-be-dev.indiaaccelerator.co
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-core-platform-be
              port:
                number: 80
