resources/k8s-manifest-staging/network/stg-indiaaccelerator.live-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stg-indiaaccelerator.live-ingress
  namespace: stg
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:344367180480:certificate/12b813c2-1db3-43d8-aa39-ac07913a1ad4
    alb.ingress.kubernetes.io/group.name: laweryerd-np-group
    alb.ingress.kubernetes.io/group.order: "40"
    alb.ingress.kubernetes.io/success-codes: "200,301,302,404"
    alb.ingress.kubernetes.io/load-balancer-name: lawyered-ingress-alb
spec:
  rules:

  # ── cow-dev.indiaaccelerator.live → coworking-platform frontend ──────────────
  - host: cow-dev.indiaaccelerator.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-coworking-platform-fe
              port:
                number: 80

  # ── cow-dev-be.indiaaccelerator.live → coworking-platform backend ────────────
  - host: cow-dev-be.indiaaccelerator.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: stg-coworking-platform-be
              port:
                number: 80
